samples/_failures_safe/1761485224_ddfba7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c284519b.c: In function ‘main’:
./samples/SAFE/__tmp_c284519b.c:138:52: error: expected ‘)’ at end of input
  138 |     if (memcmp(input_data, output_data, size_input)
      |        ~                                           ^
      |                                                    )
./samples/SAFE/__tmp_c284519b.c:138:5: error: expected declaration or statement at end of input
  138 |     if (memcmp(input_data, output_data, size_input)
      |     ^~
